<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/standings_recycler_view_item_card_view_margin_bottom"
    app:cardCornerRadius="@dimen/general_card_view_radius"
    app:contentPadding="@dimen/standings_recycler_view_item_card_view_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_team_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_team_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_first_item_standing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_first_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/tv_played_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_played_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_second_item_standing"
            app:layout_constraintStart_toEndOf="@+id/guideline_first_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_second_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.48" />

        <TextView
            android:id="@+id/tv_win_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_win_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_third_item_standing"
            app:layout_constraintStart_toEndOf="@+id/guideline_second_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_third_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.58" />

        <TextView
            android:id="@+id/tv_draw_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_draw_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_fourth_item_standing"
            app:layout_constraintStart_toEndOf="@+id/guideline_third_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_fourth_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <TextView
            android:id="@+id/tv_loss_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_loss_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_fifth_item_standing"
            app:layout_constraintStart_toEndOf="@+id/guideline_fourth_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_fifth_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.78" />

        <TextView
            android:id="@+id/tv_goal_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_goal_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_six_item_standing"
            app:layout_constraintStart_toEndOf="@+id/guideline_fifth_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_six_item_standing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <TextView
            android:id="@+id/tv_total_item_standing"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/standings_text_view_total_label"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline_six_item_standing"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>